# chess_ai

./: .gitignore  README.md  pyproject.toml
chess_ai/: __main__.py
chess_ai/player/: human_player.py  random_player.py  select.py  stockfish_player.py  supervised_model_player.py  utils.py
chess_ai/supervised/: train.py  transformer_utils.py
scripts/: init.sh  linters.sh
